--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,30 @@
 # Core ML/DL Libraries
-torch==2.0.1
-torchvision==0.15.2
-torchaudio==2.0.2
+torch>=2.9.0
+torchvision>=0.20.0
+torchaudio>=2.9.0
 
 # Computer Vision
-opencv-python==4.8.0.76
-pillow==10.0.0
+opencv-python-headless>=4.8.0
+pillow>=10.0.0
 
 # Data Processing
-numpy==1.24.3
-pandas==2.0.3
+numpy>=2.3.2
+pandas>=2.0.0
 
 # Model Evaluation
-scikit-learn==1.3.1
+scikit-learn>=1.3.0
 
 # Visualization
-matplotlib==3.7.2
+matplotlib>=3.7.0
 
 # Progress bars
-tqdm==4.66.1
+tqdm>=4.66.0
 
 # Web Framework
-streamlit==1.28.1
+streamlit>=1.28.0
 
 # Environment variables
-python-dotenv==1.0.0
+python-dotenv>=1.0.0
 
 # Optional: For deployment
-gunicorn==21.2.0
-
+gunicorn>=21.2.0
